@@ -441,6 +441,10 @@ Core and builtins
 Library
 -------
 
+- #900744: If an invalid chunked-encoding header is sent by a server,
+  httplib will now raise IncompleteRead and close the connection instead
+  of raising ValueError.
+
 - #1492: The content type of BaseHTTPServer error messages can now be
   overridden.
 
